--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-remark-images": "^3.1.37",
     "gatsby-source-filesystem": "^2.1.42",
     "gatsby-transformer-remark": "^2.6.42",
+    "gh-pages": "^2.2.0",
     "graphql": "^14.5.8",
     "is-absolute-url": "^3.0.3",
     "lodash.flatten": "^4.4.0",
@@ -57,6 +58,7 @@
   "scripts": {
     "start": "gatsby develop",
     "build": "gatsby build --prefix-paths",
+    "deploy": "yarn build && gh-pages -d public",
     "format": "prettier --write \"src/**/*.{js,jsx,css,json}\"",
     "lint": "eslint --fix \"src/**/*.{js,jsx}\""
   },
